@@ -92,7 +92,8 @@ test {
     ext.configuredWithValidTestJDK = {
         if (project.hasProperty("test9") || project.hasProperty("test10") || project.hasProperty("test12") || project.hasProperty("test13") ||
                 project.hasProperty("test14") || project.hasProperty("test15") || project.hasProperty("test16") || project.hasProperty("test18") ||
-                project.hasProperty("test19") || project.hasProperty("test20")) {
+                project.hasProperty("test19") || project.hasProperty("test20") || project.hasProperty("test22") || project.hasProperty("test23") ||
+                project.hasProperty("test24")) {
             logger.lifecycle("The newrelic-java-agent project does not support testing with the Java version configured by the -PtestN gradle property.")
             return false
         }
@@ -113,8 +114,8 @@ test {
         configuration.call()
     }
 
-    if (project.hasProperty("test22")) {
-        configureTest("jdk22") {
+    if (project.hasProperty("test26")) {
+        configureTest("jdk26") {
             jvmArgs '--add-opens=java.base/java.lang=ALL-UNNAMED',
                     '--add-opens=java.base/java.util=ALL-UNNAMED',
                     '--add-opens=java.base/java.net=ALL-UNNAMED',
@@ -123,12 +124,30 @@ test {
                     '--add-exports=java.base/sun.net.spi=ALL-UNNAMED',
                     '--add-exports=java.xml/com.sun.org.apache.xalan.internal.xsltc.trax=ALL-UNNAMED'
             useJUnit {
-                excludeCategories 'com.newrelic.test.marker.Java22IncompatibleTest'
+                excludeCategories 'com.newrelic.test.marker.Java26IncompatibleTest'
             }
         }
         // mockito uses a version of bytebuddy that has experimental support for Java 21
         systemProperty("net.bytebuddy.experimental", "true")
     }
+
+    if (project.hasProperty("test25")) {
+        configureTest("jdk25") {
+            jvmArgs '--add-opens=java.base/java.lang=ALL-UNNAMED',
+                    '--add-opens=java.base/java.util=ALL-UNNAMED',
+                    '--add-opens=java.base/java.net=ALL-UNNAMED',
+                    '--add-opens=java.base/java.io=ALL-UNNAMED',
+                    '--add-opens=java.base/sun.net.spi=ALL-UNNAMED',
+                    '--add-exports=java.base/sun.net.spi=ALL-UNNAMED',
+                    '--add-exports=java.xml/com.sun.org.apache.xalan.internal.xsltc.trax=ALL-UNNAMED'
+            useJUnit {
+                excludeCategories 'com.newrelic.test.marker.Java25IncompatibleTest'
+            }
+        }
+        // mockito uses a version of bytebuddy that has experimental support for Java 21
+        systemProperty("net.bytebuddy.experimental", "true")
+    }
+
     if (project.hasProperty("test21")) {
         configureTest("jdk21") {
             jvmArgs '--add-opens=java.base/java.lang=ALL-UNNAMED',
